tests/front_end/input/variable_use_analysis/errors/wrong_unary_operand.wl
// Error at line 5, column 5: Variable as argument of unary operator expected
void f() {}

int main() {
    --f();
    return 0;
}